Add camera to ECS

--- a/inMyRoom_vulkan/CMakeLists.txt
+++ b/inMyRoom_vulkan/CMakeLists.txt
@@ -56,9 +56,13 @@ SET(SRC #etc-.h
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/ModelDrawCompEntity.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/NodeGlobalMatrixCompEntity.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/PositionCompEntity.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/CameraCompEntity.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralCompEntities/DefaultCameraInputCompEntity.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/ModelDrawComp.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/NodeGlobalMatrixComp.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/PositionComp.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/CameraComp.h"
+        "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/GeneralComponents/DefaultCameraInputComp.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/ComponentBaseClass.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/ComponentRawBaseClass.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ECS/ComponentSparseBaseClass.h"
@@ -86,8 +90,6 @@ SET(SRC #etc-.h
         "${inMyRoom_vulkan_SOURCE_DIR}/include/VulkanInit.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Graphics.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/InputManager.h"
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/CameraBaseClass.h"
-        "${inMyRoom_vulkan_SOURCE_DIR}/include/NaiveCamera.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/Drawer.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/WindowWithAsyncInput.h"
         "${inMyRoom_vulkan_SOURCE_DIR}/include/ShadersSetsFamiliesCache.h"
@@ -102,9 +104,13 @@ SET(SRC #etc-.h
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/ModelDrawCompEntity.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/NodeGlobalMatrixCompEntity.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/PositionCompEntity.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/CameraCompEntity.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralCompEntities/DefaultCameraInputCompEntity.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/ModelDrawComp.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/NodeGlobalMatrixComp.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/PositionComp.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/CameraComp.cpp"
+        "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/GeneralComponents/DefaultCameraInputComp.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/ComponentBaseClass.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/ComponentRawBaseClass.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ECS/ComponentSparseBaseClass.cpp"
@@ -130,8 +136,6 @@ SET(SRC #etc-.h
         "${inMyRoom_vulkan_SOURCE_DIR}/src/VulkanInit.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Graphics.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/InputManager.cpp"
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/CameraBaseClass.cpp"
-        "${inMyRoom_vulkan_SOURCE_DIR}/src/NaiveCamera.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/Drawer.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/WindowWithAsyncInput.cpp"
         "${inMyRoom_vulkan_SOURCE_DIR}/src/ShadersSetsFamiliesCache.cpp"
