--- a/inMyRoom_vulkan/testModel/Table_room/gameConfig.cfg
+++ b/inMyRoom_vulkan/testModel/Table_room/gameConfig.cfg
@@ -1,6 +1,6 @@
 // Game file using emilk/configuru CFG
 
-// "empty" is already imported in order to build logic around it
+// "_empty" is already imported in order to build logic around it
 imports: {
 	toImport:				["map"]
 	map:					"scene.gltf"
