--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -9,10 +9,10 @@ graphicsSettings: {
 	yRes:				900
 	presentMode:		"FIFO"			// Immediate, FIFO, FIFOrelaxed, Mailbox
 	buffersCount:		2				// Swapchain Images
-	FOV:				90.0
+	FOV:				100.0
 	nearPlaneDistance:	0.1
 	farPlaneDistance:	100.0
-	useMipmaps:			true			
+	useMipmaps:			true
 }
 
 inputSettings: {
@@ -27,6 +27,6 @@ inputSettings: {
 	}
 }
 
-NaiveCamera: {
+DefaultCamera: {
 	Speed:				5.0
 }
