--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
@@ -66,13 +66,7 @@
     <ClCompile Include="src\WindowWithAsyncInput.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\NaiveCamera.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\InputManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\CameraBaseClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\VulkanInit.cpp">
@@ -165,6 +159,21 @@
     <ClCompile Include="src\GameImporter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ECS\GeneralCompEntities\CameraCompEntity.cpp">
+      <Filter>Source Files\ECS\GeneralCompEntities</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ECS\GeneralComponents\CameraComp.cpp">
+      <Filter>Source Files\ECS\GeneralComponents</Filter>
+    </ClCompile>
+    <ClCompile Include="include\ECS\GeneralComponents\DefaultCameraInputComp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ECS\GeneralCompEntities\DefaultCameraInputCompEntity.cpp">
+      <Filter>Source Files\ECS\GeneralCompEntities</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ECS\GeneralComponents\DefaultCameraInputComp.cpp">
+      <Filter>Source Files\ECS\GeneralComponents</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Engine.h">
@@ -177,9 +186,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\WindowWithAsyncInput.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="include\NaiveCamera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Configuru\configuru.hpp">
@@ -257,9 +263,6 @@
     <ClInclude Include="include\ECS\GeneralCompEntities\PositionCompEntity.h">
       <Filter>Header Files\ECS\GeneralCompEntities</Filter>
     </ClInclude>
-    <ClInclude Include="include\CameraBaseClass.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="include\Geometry\Cuboid.h">
       <Filter>Header Files\Geometry</Filter>
     </ClInclude>
@@ -298,6 +301,18 @@
     </ClInclude>
     <ClInclude Include="include\GameImporter.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ECS\GeneralCompEntities\CameraCompEntity.h">
+      <Filter>Header Files\ECS\GeneralCompEntities</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ECS\GeneralComponents\CameraComp.h">
+      <Filter>Header Files\ECS\GeneralComponents</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ECS\GeneralCompEntities\DefaultCameraInputCompEntity.h">
+      <Filter>Header Files\ECS\GeneralCompEntities</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ECS\GeneralComponents\DefaultCameraInputComp.h">
+      <Filter>Header Files\ECS\GeneralComponents</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
