Add tweaking using gameConfig

--- a/inMyRoom_vulkan/testModel/Table_room/gameConfig.cfg
+++ b/inMyRoom_vulkan/testModel/Table_room/gameConfig.cfg
@@ -1,19 +1,38 @@
 // Game file using emilk/configuru CFG
 
 // "_empty" is already imported in order to build logic around it
-imports: {
-	toImport:				["map"]
-	map:					"scene.gltf"
+imports:
+{
+	toImport:										["map"]
+	map:											"scene.gltf"
 }
 
-fabs: {
-	toFab:					["level"]
-	level: {
-		basedOn:			"map/OSG_Scene"
+fabs:
+{
+	toFab:											["level"]
+	level: 
+	{
+		basedOn:									"map/OSG_Scene"
+		tweak: 
+		{
+			toTweak:								["moveObject"]
+			moveObject: 
+			{
+				nodeName:							"gltf orientation matrix/model correction matrix/fbx import/null/RootNode/Podium/Podium_stone_0"
+				components:
+				{
+					Position:	//example
+					{
+						GlobalTranslation:			[ 0.0, 0.0, 0.0]
+					}
+				}
+			}
+		}
 	}
 }
 
-init: {
+init:
+{
 	toInit:					["scene"]
 	scene:					"level"
 }
