BROKEN! X-MAS BACKUP

--- a/inMyRoom_vulkan/config.cfg
+++ b/inMyRoom_vulkan/config.cfg
@@ -7,7 +7,7 @@ game: {
 graphicsSettings: {
 	xRes:				1600
 	yRes:				900
-	presentMode:		"FIFO"			// Immediate, FIFO, FIFOrelaxed, Mailbox
+	presentMode:		"Immediate"		// Immediate, FIFO, FIFOrelaxed, Mailbox
 	buffersCount:		2				// Swapchain Images
 	FOV:				100.0
 	nearPlaneDistance:	0.1
