--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClCompile Include="src\ECS\GeneralComponents\DefaultCameraInputComp.cpp">
       <Filter>Source Files\ECS\GeneralComponents</Filter>
     </ClCompile>
+    <ClCompile Include="include\Meshes\SkinsOfMeshes.cpp">
+      <Filter>Source Files\Meshes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Engine.h">
@@ -316,6 +319,9 @@
     </ClInclude>
     <ClInclude Include="include\ECS\GeneralComponents\DefaultCameraInputComp.h">
       <Filter>Header Files\ECS\GeneralComponents</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Meshes\SkinsOfMeshes.h">
+      <Filter>Header Files\Meshes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
