Add skining and bugfixing winAPI (no Linux)

--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
@@ -33,11 +33,13 @@
     <ClCompile Include="src\ECS\GeneralCompEntities\ModelDrawCompEntity.cpp" />
     <ClCompile Include="src\ECS\GeneralCompEntities\NodeGlobalMatrixCompEntity.cpp" />
     <ClCompile Include="src\ECS\GeneralCompEntities\PositionCompEntity.cpp" />
+    <ClCompile Include="src\ECS\GeneralCompEntities\SkinCompEntity.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\CameraComp.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\DefaultCameraInputComp.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\ModelDrawComp.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\NodeGlobalMatrixComp.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\PositionComp.cpp" />
+    <ClCompile Include="src\ECS\GeneralComponents\SkinComp.cpp" />
     <ClCompile Include="src\ExportedFunctionsConstructor.cpp" />
     <ClCompile Include="src\GameImporter.cpp" />
     <ClCompile Include="src\Geometry\Cuboid.cpp" />
@@ -79,12 +81,14 @@
     <ClInclude Include="include\ECS\GeneralCompEntities\ModelDrawCompEntity.h" />
     <ClInclude Include="include\ECS\GeneralCompEntities\NodeGlobalMatrixCompEntity.h" />
     <ClInclude Include="include\ECS\GeneralCompEntities\PositionCompEntity.h" />
+    <ClInclude Include="include\ECS\GeneralCompEntities\SkinCompEntity.h" />
     <ClInclude Include="include\ECS\GeneralComponents\CameraComp.h" />
     <ClInclude Include="include\ECS\GeneralComponents\DefaultCameraInputComp.h" />
     <ClInclude Include="include\ECS\GeneralComponents\ModelDrawComp.h" />
     <ClInclude Include="include\ECS\GeneralComponents\NodeGlobalMatrixComp.h" />
     <ClInclude Include="include\ECS\GeneralComponents\PositionComp.h" />
     <ClInclude Include="include\const_maps.h" />
+    <ClInclude Include="include\ECS\GeneralComponents\SkinComp.h" />
     <ClInclude Include="include\ExportedFunctionsConstructor.h" />
     <ClInclude Include="include\GameImporter.h" />
     <ClInclude Include="include\Geometry\Cuboid.h" />
