Refactoring (no linux)

--- a/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
+++ b/inMyRoom_vulkan/inMyRoom_vulkan.vcxproj
@@ -29,18 +29,18 @@
     <ClCompile Include="src\ECS\GeneralCompEntities\AnimationActorCompEntity.cpp" />
     <ClCompile Include="src\ECS\GeneralCompEntities\AnimationComposerCompEntity.cpp" />
     <ClCompile Include="src\ECS\GeneralCompEntities\CameraCompEntity.cpp" />
-    <ClCompile Include="src\ECS\GeneralCompEntities\DefaultCameraInputCompEntity.cpp" />
+    <ClCompile Include="src\ECS\GeneralCompEntities\CameraDefaultInputCompEntity.cpp" />
     <ClCompile Include="src\ECS\GeneralCompEntities\ModelDrawCompEntity.cpp" />
     <ClCompile Include="src\ECS\GeneralCompEntities\NodeGlobalMatrixCompEntity.cpp" />
-    <ClCompile Include="src\ECS\GeneralCompEntities\PositionCompEntity.cpp" />
+    <ClCompile Include="src\ECS\GeneralCompEntities\NodeDataCompEntity.cpp" />
     <ClCompile Include="src\ECS\GeneralCompEntities\SkinCompEntity.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\AnimationActorComp.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\AnimationComposerComp.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\CameraComp.cpp" />
-    <ClCompile Include="src\ECS\GeneralComponents\DefaultCameraInputComp.cpp" />
+    <ClCompile Include="src\ECS\GeneralComponents\CameraDefaultInputComp.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\ModelDrawComp.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\NodeGlobalMatrixComp.cpp" />
-    <ClCompile Include="src\ECS\GeneralComponents\PositionComp.cpp" />
+    <ClCompile Include="src\ECS\GeneralComponents\NodeDataComp.cpp" />
     <ClCompile Include="src\ECS\GeneralComponents\SkinComp.cpp" />
     <ClCompile Include="src\ExportedFunctionsConstructor.cpp" />
     <ClCompile Include="src\GameDLLimporter.cpp" />
@@ -83,18 +83,18 @@
     <ClInclude Include="include\ECS\GeneralCompEntities\AnimationActorCompEntity.h" />
     <ClInclude Include="include\ECS\GeneralCompEntities\AnimationComposerCompEntity.h" />
     <ClInclude Include="include\ECS\GeneralCompEntities\CameraCompEntity.h" />
-    <ClInclude Include="include\ECS\GeneralCompEntities\DefaultCameraInputCompEntity.h" />
+    <ClInclude Include="include\ECS\GeneralCompEntities\CameraDefaultInputCompEntity.h" />
     <ClInclude Include="include\ECS\GeneralCompEntities\ModelDrawCompEntity.h" />
     <ClInclude Include="include\ECS\GeneralCompEntities\NodeGlobalMatrixCompEntity.h" />
-    <ClInclude Include="include\ECS\GeneralCompEntities\PositionCompEntity.h" />
+    <ClInclude Include="include\ECS\GeneralCompEntities\NodeDataCompEntity.h" />
     <ClInclude Include="include\ECS\GeneralCompEntities\SkinCompEntity.h" />
     <ClInclude Include="include\ECS\GeneralComponents\AnimationActorComp.h" />
     <ClInclude Include="include\ECS\GeneralComponents\AnimationComposerComp.h" />
     <ClInclude Include="include\ECS\GeneralComponents\CameraComp.h" />
-    <ClInclude Include="include\ECS\GeneralComponents\DefaultCameraInputComp.h" />
+    <ClInclude Include="include\ECS\GeneralComponents\CameraDefaultInputComp.h" />
     <ClInclude Include="include\ECS\GeneralComponents\ModelDrawComp.h" />
     <ClInclude Include="include\ECS\GeneralComponents\NodeGlobalMatrixComp.h" />
-    <ClInclude Include="include\ECS\GeneralComponents\PositionComp.h" />
+    <ClInclude Include="include\ECS\GeneralComponents\NodeDataComp.h" />
     <ClInclude Include="include\const_maps.h" />
     <ClInclude Include="include\ECS\GeneralComponents\SkinComp.h" />
     <ClInclude Include="include\ExportedFunctionsConstructor.h" />
