--- a/inMyRoom_vulkan/testGames/Table_room/game_dll/game_dll.vcxproj
+++ b/inMyRoom_vulkan/testGames/Table_room/game_dll/game_dll.vcxproj
@@ -28,11 +28,12 @@
     <ClInclude Include="..\..\..\include\ECS\EntitiesHandler.h" />
     <ClInclude Include="..\..\..\include\ECS\ExportedFunctions.h" />
     <ClInclude Include="..\..\..\include\ECS\GeneralCompEntities\AnimationActorCompEntity.h" />
+    <ClInclude Include="..\..\..\include\ECS\GeneralCompEntities\AnimationComposerCompEntity.h" />
     <ClInclude Include="..\..\..\include\ECS\GeneralCompEntities\CameraCompEntity.h" />
-    <ClInclude Include="..\..\..\include\ECS\GeneralCompEntities\DefaultCameraInputCompEntity.h" />
+    <ClInclude Include="..\..\..\include\ECS\GeneralCompEntities\CameraDefaultInputCompEntity.h" />
     <ClInclude Include="..\..\..\include\ECS\GeneralCompEntities\ModelDrawCompEntity.h" />
+    <ClInclude Include="..\..\..\include\ECS\GeneralCompEntities\NodeDataCompEntity.h" />
     <ClInclude Include="..\..\..\include\ECS\GeneralCompEntities\NodeGlobalMatrixCompEntity.h" />
-    <ClInclude Include="..\..\..\include\ECS\GeneralCompEntities\PositionCompEntity.h" />
     <ClInclude Include="..\..\..\include\ECS\GeneralCompEntities\SkinCompEntity.h" />
     <ClInclude Include="..\..\..\include\game_dll.h" />
     <ClInclude Include="include\CompEntities\VelocityCompEntity.h" />
@@ -48,11 +49,12 @@
     <ClCompile Include="..\..\..\src\ECS\EntitiesHandler.cpp" />
     <ClCompile Include="..\..\..\src\ECS\ExportedFunctions.cpp" />
     <ClCompile Include="..\..\..\src\ECS\GeneralCompEntities\AnimationActorCompEntity.cpp" />
+    <ClCompile Include="..\..\..\src\ECS\GeneralCompEntities\AnimationComposerCompEntity.cpp" />
     <ClCompile Include="..\..\..\src\ECS\GeneralCompEntities\CameraCompEntity.cpp" />
-    <ClCompile Include="..\..\..\src\ECS\GeneralCompEntities\DefaultCameraInputCompEntity.cpp" />
+    <ClCompile Include="..\..\..\src\ECS\GeneralCompEntities\CameraDefaultInputCompEntity.cpp" />
     <ClCompile Include="..\..\..\src\ECS\GeneralCompEntities\ModelDrawCompEntity.cpp" />
+    <ClCompile Include="..\..\..\src\ECS\GeneralCompEntities\NodeDataCompEntity.cpp" />
     <ClCompile Include="..\..\..\src\ECS\GeneralCompEntities\NodeGlobalMatrixCompEntity.cpp" />
-    <ClCompile Include="..\..\..\src\ECS\GeneralCompEntities\PositionCompEntity.cpp" />
     <ClCompile Include="..\..\..\src\ECS\GeneralCompEntities\SkinCompEntity.cpp" />
     <ClCompile Include="..\..\..\src\game_dll.cpp" />
     <ClCompile Include="src\CompEntities\VelocityCompEntity.cpp" />
