--- a/inMyRoom_vulkan/testGames/Table_room/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/Table_room/gameConfig.cfg
@@ -29,7 +29,7 @@ fabs:
 				{
 					AnimationComposer:
 					{
-						ShouldAutoplay:				1
+						ShouldAutoplay:				true
 					}
 				}
 			}
@@ -40,7 +40,7 @@ fabs:
 				{
 					AnimationComposer:
 					{
-						ShouldAutoplay:				1
+						ShouldAutoplay:				true
 					}
 				}
 			}
@@ -51,7 +51,7 @@ fabs:
 				{
 					AnimationComposer:
 					{
-						ShouldAutoplay:				1
+						ShouldAutoplay:				true
 					}
 				}
 			}
@@ -62,7 +62,7 @@ fabs:
 				{
 					AnimationComposer:
 					{
-						ShouldAutoplay:				1
+						ShouldAutoplay:				true
 					}
 				}
 			}
