--- a/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
@@ -2,7 +2,7 @@
 
 gameDLL:
 {
-	path_win:										"game_dll/x64/Release/game_dll.dll"
+	path_win:										"game_dll/x64/Debug/game_dll.dll"
 }
 
 // "_empty" is already imported in order to build logic around it
@@ -15,8 +15,8 @@ imports:
 
 fabs:
 {
-	toFab:											["level", "snake_fab"]
-	level: 
+	toFab:											["map_fab", "snake_fab"]
+	map_fab: 
 	{
 		basedOn:									"map/Scene"
 		tweak: 
@@ -73,38 +73,34 @@ fabs:
 		basedOn:									"snake/Scene"
 		tweak: 
 		{
-			toTweak:								["snakeLocation", "snakeAnimation"]
-			snakeLocation:
+			toTweak:								["snakeComponents"]
+			snakeComponents:
 			{
 				nodeName:							"SnakeArmature"
 				components:
 				{
 					NodeData:
 					{
-						GlobalTranslation:			[0.0 , -5.0, 0.0]
+						GlobalTranslation:			[0.0 , -1.0, 0.0]
 					}
-				}
-			}
-			snakeAnimation: 
-			{
-				nodeName:							"_animations/SnakeArmatureAction"
-				components:
-				{
-					AnimationComposer:
+					SnakePlayer:
 					{
-						ShouldAutoplay:				true
+						Speed:						3.0
+						RotationSpeed:				1.0
+						AnimationComposer:			"../_animations/SnakeArmatureAction"
+					}
+					Camera:
+					{
 					}
 				}
 			}
-			
-			
 		}
 	}
 }
 
 init:
 {
-	toInit:					["enviroment", "object"]
-	enviroment:				"level"
-	object:					"snake_fab"
+	toInit:					["map_init", "snake_init"]
+	map_init:				"map_fab"
+	snake_init:				"snake_fab"
 }
