Making more nvidia friendly and other snakeGame changes

--- a/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
+++ b/inMyRoom_vulkan/testGames/SnakeGame/gameConfig.cfg
@@ -81,13 +81,14 @@ fabs:
 				{
 					NodeData:
 					{
-						GlobalTranslation:			[0.0 , -1.0, 0.0]
+						GlobalTranslation:			[  0.0, -0.9, 0.0]
 					}
 					SnakePlayer:
 					{
 						Speed:						3.0
 						RotationSpeed:				1.0
 						AnimationComposer:			"../_animations/SnakeArmatureAction"
+						CameraOffset:				[ -2.0, -1.0, 0.0]
 					}
 					Camera:
 					{
